fix change version dropdown on mobile

--- a/asset/sass/blocks/_version-selector.scss
+++ b/asset/sass/blocks/_version-selector.scss
@@ -14,6 +14,12 @@
             border: 1px solid $separater-color;
             box-shadow: none;
             background-color: var(--primary-color);
+            @include media-breakpoint-down(sm) {
+                left: auto !important;
+                right: 0;
+                top: 100% !important;
+                transform: none !important;
+            }
         }
 
         &-item {
